Creating enums trying to the drawing and front end of the app new page for Start and Adding players and new vision of Card Field