@@ -6,22 +6,23 @@ import java.util.List;
 import net.dodo.crew.model.enums.Suit;
 
 public class Deck {
-  private final List<Card> cards = new ArrayList<>();
+  private List<Card> cards;
 
   public Deck() {
+    cards = new ArrayList<>();
     initializeDeck();
   }
 
   private void initializeDeck() {
-
+    // Add colored cards (1-9 in each suit and 1-4 rockets)
     for (Suit suit : Suit.values()) {
-      if (suit == Suit.ROCKETS) {
-        for (int i = 1; i <= 4; i++) {
-          cards.add(new Card(suit, 0));
+      if (suit != Suit.ROCKET) {
+        for (int value = 1; value <= 9; value++) {
+          cards.add(new Card(value, suit));
         }
       } else {
-        for (int i = 1; i <= 9; i++) {
-          cards.add(new Card(suit, i));
+        for (int value = 1; value <= 4; value++) {
+          cards.add(new Card(value));
         }
       }
     }
@@ -31,8 +32,18 @@ public class Deck {
     Collections.shuffle(cards);
   }
 
-  public Card deal() {
-    if (cards.isEmpty()) return null;
-    return cards.removeFirst();
+  public Card drawCard() {
+    if (cards.isEmpty()) {
+      return null;
+    }
+    return cards.remove(cards.size() - 1);
+  }
+
+  public List<Card> getCards() {
+    return new ArrayList<>(cards);
+  }
+
+  public boolean isEmpty() {
+    return cards.isEmpty();
   }
 }
